# syntheffect-sdl2-opencv

./: .gitignore  .travis.yml  .vim_syntastic  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
include/syntheffect/: app.h  effects.h  midi.h  module.h  synth.h
include/syntheffect/module/: cat_explorer.h  cat_explorer_module.h  color_tweak.h  color_tweak_module.h  derivative.h  derivative_module.h  feedback.h  history_explorer.h  history_explorer_module.h  merger.h  module.h  tracker.h  writer.h  writer_module.h
include/syntheffect/synth/: cat_explorer_synth.h  cmd_micro.h  derivative_synth.h  duel_color_map_synth.h  history_explorer_synth.h
scripts/: remove-bframes.sh
src/: app.cc  effects.cpp  main.cc  midi.cc  module.cc  synth.cc
src/module/: cat_explorer.cc  cat_explorer_module.cc  color_tweak.cc  color_tweak_module.cc  derivative.cc  derivative_module.cc  feedback.cc  history_explorer.cc  history_explorer_module.cc  merger.cc  module.cc  tracker.cc  writer.cc  writer_module.cc
src/synth/: cat_explorer_synth.cc  cmd_micro.cc  derivative_synth.cc  history_explorer_synth.cc
